[package]
name = "ctetool"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = [ "derive" ] }
image = "0.23.13"
pmd_cte = { path = "../pmd_cte" }